src/objects/Form_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DataType__c</fullName>
        <label>DataType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_name__c</fullName>
        <label>Form name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sobject_field__c</fullName>
        <label>Sobject field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Form Mapping</label>
</CustomObject>